--- a/Fresh/Fresh/ProfileView.xib
+++ b/Fresh/Fresh/ProfileView.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
@@ -8,11 +9,11 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ProfileView" customModule="Fresh" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="365" height="168"/>
+            <rect key="frame" x="0.0" y="0.0" width="344" height="168"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatar" translatesAutoresizingMaskIntoConstraints="NO" id="hXu-bi-E37">
-                    <rect key="frame" x="37" y="54" width="70" height="70"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="avatar" translatesAutoresizingMaskIntoConstraints="NO" id="hXu-bi-E37">
+                    <rect key="frame" x="20" y="54" width="70" height="70"/>
                     <animations/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="hXu-bi-E37" secondAttribute="height" multiplier="1:1" id="KWo-QU-3qf"/>
@@ -25,22 +26,22 @@
                         </mask>
                     </variation>
                 </imageView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M1X-dW-awy">
-                    <rect key="frame" x="139" y="108" width="114" height="30"/>
+                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M1X-dW-awy">
+                    <rect key="frame" x="122" y="108" width="114" height="30"/>
                     <state key="normal" title="Connect to Uber"/>
                 </button>
                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8hF-fb-AJ7">
-                    <rect key="frame" x="256" y="95" width="51" height="31"/>
+                    <rect key="frame" x="239" y="95" width="51" height="31"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="49" id="xn0-ta-IdP"/>
                     </constraints>
                 </switch>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cB8-4A-58G">
-                    <rect key="frame" x="139" y="40" width="147" height="30"/>
+                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cB8-4A-58G">
+                    <rect key="frame" x="122" y="40" width="147" height="30"/>
                     <state key="normal" title="Connect to Facebook"/>
                 </button>
-                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="obf-ht-j3G">
-                    <rect key="frame" x="306" y="44" width="51" height="31"/>
+                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="obf-ht-j3G">
+                    <rect key="frame" x="289" y="44" width="51" height="31"/>
                     <connections>
                         <action selector="switchFacebook:" destination="iN0-l3-epB" eventType="valueChanged" id="5Zl-Cr-vX0"/>
                     </connections>
@@ -88,7 +89,7 @@
                 <outlet property="profileImage" destination="hXu-bi-E37" id="0oJ-FW-RmW"/>
                 <outlet property="switchFacebook" destination="obf-ht-j3G" id="nP3-pr-rAc"/>
             </connections>
-            <point key="canvasLocation" x="55.5" y="-503"/>
+            <point key="canvasLocation" x="117" y="-502"/>
         </view>
     </objects>
     <resources>
