--- a/Fresh/Fresh/Base.lproj/LaunchScreen.storyboard
+++ b/Fresh/Fresh/Base.lproj/LaunchScreen.storyboard
@@ -16,13 +16,25 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="shop" translatesAutoresizingMaskIntoConstraints="NO" id="4T8-7r-PEl">
+                                <rect key="frame" x="180" y="283" width="240" height="128"/>
+                            </imageView>
+                        </subviews>
                         <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.54117647058823526" green="0.73725490196078436" blue="0.22745098039215686" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="4T8-7r-PEl" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="9g2-2Y-P2J"/>
+                            <constraint firstItem="4T8-7r-PEl" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="HFO-1n-qe8"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="53" y="383"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="shop" width="50" height="68"/>
+    </resources>
 </document>
