--- a/Fresh/Fresh/Base.lproj/LaunchScreen.storyboard
+++ b/Fresh/Fresh/Base.lproj/LaunchScreen.storyboard
@@ -22,12 +22,13 @@
                             </imageView>
                         </subviews>
                         <animations/>
-                        <color key="backgroundColor" red="0.54117647058823526" green="0.73725490196078436" blue="0.22745098039215686" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.51372549019607838" green="0.75294117647058822" blue="0.396078431372549" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="4T8-7r-PEl" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="9g2-2Y-P2J"/>
                             <constraint firstItem="4T8-7r-PEl" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="HFO-1n-qe8"/>
                         </constraints>
                     </view>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
